stock-analyzer/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stock-analyzer
  name: stock-analyzer-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-analyzer
      tier: backend
      track: stable
  template:
    metadata:
      labels:
        app: stock-analyzer
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend
          image: raju6713/sa_backend:aarch64
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: stock-analyzer
  name: sa-backend-svc
spec:
  selector:
    app: stock-analyzer
    tier: backend
  ports:
  - protocol: TCP
    port: 5000
