stock-analyzer/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-analyzer-nginx
  namespace: stock-analyzer
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
            # readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: stock-analyzer-nginx-conf
          items:
            - key: default.conf
              path: default.conf

---
apiVersion: v1
kind: Service
metadata:
  name: sa-nginx-svc
  namespace: stock-analyzer
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
