stock-analyzer/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stock-analyzer
  name: stock-analyzer-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-analyzer
      tier: websocket
      track: stable
  template:
    metadata:
      labels:
        app: stock-analyzer
        tier: websocket
        track: stable
    spec:
      containers:
        - name: websocket
          image: raju6713/sa_websocket:aarch64
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: stock-analyzer
  name: sa-websocket-svc
spec:
  selector:
    app: stock-analyzer
    tier: websocket
  ports:
  - protocol: TCP
    port: 3213
