stock-analyzer/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-analyzer-ingress
  namespace: stock-analyzer
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: stockanalyzer.cgrpi.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-nginx-svc
            port: 
              number: 80
